# webnovel

./: .gitignore  LICENSE  README.md  add_novel_to_database_biquge.py  pyproject.toml  requirements.txt  set_user_to_admin.py
app/: __init__.py  admin.py  consts.py  dependencies.py  enums.py  main.py  models.py  schemas.py  securities.py  spider.py  utils.py
app/api/: __init__.py
app/core/: admin.py
app/database/: __init__.py  author.py  chapter.py  crud.py  novel.py  reading_entry.py  session.py  user.py
app/model/: chapter.py  novel.py
app/pages/: __init__.py
app/router/: admin.py  admin_api.py  api.py  auth.py  common.py  pages.py
app/routers/: api.py  auth.py  internal.py  pages.py
app/schema/: author.py  chapter.py  novel.py  reading_entry.py  user.py
app/spiders/: biquge1.py  biquge2.py  piaotian.py
app/utils/: auth_utils.py  model_utils.py  process_utils.py  scraper_utils.py
scripts/: add_novel_to_database_biquge.py  add_novel_to_database_txt.py  deploy.sh
static/css/: common.css
static/js/: add_bookmark.js  base.js  bookshelf.js  chapter.js  common.js  index.js  login_form.js  pad_cells.js  register_form.js  scrape_form.js
templates/: author.html.jinja  base.html.jinja  bookshelf.html.jinja  chapter.html.jinja  chapters.html.jinja  error.html.jinja  footer.html  index.html  index.html.jinja  login_form.html.jinja  novel.html  novel.html.jinja  novels.html.jinja  scrape_form.html.jinja
templates/admin/: panel.html.jinja  scrape_form.html.jinja
webnovel_backend/: __init__.py  dependencies.py  enums.py  utils.py
(+32 files in other folders)
