[tool.poetry]
name = "webnovel"
version = "0.1.0"
description = "网络小说阅读网站"
authors = ["Sicheng He <hesicheng20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic = "^2.7.4"
sqlalchemy = "^2.0.31"
jinja2 = "^3.1.4"
click = "^8.1.7"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
